- updated biblio and corrected references - added chapter summary and perspective (not yet TWA?)

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -54,6 +54,20 @@
   language = {English}
 }
 
+@inproceedings{hillairet2009-2,
+  title = {Validation of the {{LH}} Antenna Code {{ALOHA}} against {{Tore Supra}} Experiments},
+  booktitle = {{{AIP Conference Proceedings}}},
+  author = {Hillairet, J. and Ekedahl, A. and Ko{\v c}an, M. and Gunn, J. P. and Goniche, M.},
+  year = {2009},
+  month = nov,
+  volume = {1187},
+  pages = {375--378},
+  publisher = {{American Institute of Physics}},
+  doi = {10/b7xgtr},
+  copyright = {All rights reserved},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\QQN6U6YH\\1.html}
+}
+
 @article{hillairet2010,
   title = {{{ALOHA}}: An {{Advanced LOwer Hybrid Antenna}} Coupling Code},
   shorttitle = {{{ALOHA}}},
@@ -87,6 +101,22 @@
   journal = {Fusion Engineering and Design},
   language = {en},
   number = {6-8}
+}
+
+@article{hillairet2012,
+  title = {Design and Testing of a {{5GHz TE10}}\textendash{{TE30}} Mode Converter Mock-up for the Lower Hybrid Antenna Proposed for {{ITER}}},
+  author = {Hillairet, J. and Achard, J. and Brun, C. and Rasio, S. and Soler, B.},
+  year = {2012},
+  month = mar,
+  volume = {87},
+  pages = {275--280},
+  issn = {09203796},
+  doi = {10/f3w82q},
+  copyright = {All rights reserved},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\9V3UMNWB\\Hillairet et al_2012_Design and testing of a 5GHz TE10–TE30 mode converter mock-up for the lower.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\NKQMTE49\\Hillairet et al. - 2012 - Design and testing of a 5GHz TE10–TE30 mode conver.pdf},
+  journal = {Fusion Engineering and Design},
+  language = {en},
+  number = {3}
 }
 
 @inproceedings{hillairet2012-1,
@@ -223,6 +253,49 @@
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\Hillairet et al._2019_Protecting Fusion Reactors from Extreme Heat.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\2ICXYC2X\\Hillairet - 2019 - Protecting Fusion Reactors from Extreme Heat.pdf},
   journal = {ANSYS Advantage},
   language = {en},
+  number = {1}
+}
+
+@inproceedings{hillairet2020,
+  title = {Radio-Frequency Hands-on for Nuclear Fusion {{Master}}'s Sudents},
+  booktitle = {European {{Journal}} of {{Physics}}},
+  author = {Hillairet, Julien and Achard, J. and Ragona, R.},
+  year = {2020},
+  month = feb,
+  volume = {41},
+  pages = {024001},
+  doi = {10/ggjf4p},
+  abstract = {High-power continuous-wave radio-frequency (RF) systems in the megawatt range are commonly used in nuclear fusion experiments. Such kinds of RF systems being rather rare, Master's students do not know how these systems are used in practice \textendash{} even students engaged in nuclear fusion courses. This is the reason why, as part of the French and European Master's in fusion physics and technologies, dedicated practical work on topics related to plasma RF heating are proposed to students. Over a few days, these students discover how to perform RF measurements and succeed in characterizing real-scale components used in plasma RF heating experiments. This paper details four hands-on approaches which have been conducted over eight years with several tens of students having no prior knowledge in RF engineering.},
+  copyright = {All rights reserved},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\NVSSMBG3\\Hillairet et al_2020_Radio-frequency hands-on for nuclear fusion Master's sudents.pdf},
+  language = {en}
+}
+
+@incollection{hillairet2020-1,
+  title = {Plasma {{Heating}} \& {{Current Drive Technology}}},
+  booktitle = {Fundamentals of {{Magnetic Fusion Technology}}},
+  author = {Hillairet, Julien and Noterdaeme, J -M and {agostinetti}, P. and Sonato, P and Tran, M. Q},
+  year = {2020},
+  edition = {G. Van Oost},
+  publisher = {{IAEA}},
+  address = {{Vienna, Austria}},
+  copyright = {All rights reserved},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\KEZEXBIU\\Hillairet et al_2020_Plasma Heating & Current Drive Technology.pdf},
+  keywords = {\#nosource}
+}
+
+@article{hillairet2020-2,
+  title = {{{RF}} Network Analysis of the {{WEST ICRH}} Antenna with the Open-Source Python Scikit-{{RF}} Package},
+  author = {Hillairet, Julien},
+  year = {2020},
+  month = sep,
+  volume = {2254},
+  pages = {070010},
+  publisher = {{American Institute of Physics}},
+  issn = {0094-243X},
+  doi = {10/ghbw5p},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\LERE28BT\\Hillairet_2019_RF Network Analysis of the WEST ICRH Antenna with the Open-Source Python.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\QVETND4Y\\Hillairet et al_2020_RF network analysis of the WEST ICRH antenna with the open-source python.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\DX235YBU\\5.html},
+  journal = {AIP Conference Proceedings},
   number = {1}
 }
 
