--- a/master.tex
+++ b/master.tex
@@ -343,6 +343,13 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 		\printbibliography[heading=none]
 	\end{refsection}
 
+	\section*{Scientific Committee}
+	\begin{itemize}
+		\item Vice-président de la commision H (ondes dans les plasmas) de l'Union Radio-Scientifique Internationale (URSI France)
+	\end{itemize}
+		
+
+
 	\section*{Conference and Journal Editorial Work}
 	\begin{itemize}
 		\item Editor of the \href{https://www.epj-conferences.org/articles/epjconf/abs/2017/26/contents/contents.html}{22th Topical Conference on Radio-Frequency Power in Plasmas}, Aix-en-Provence, France, May 30 - June 2, 2017.
