--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -411,7 +411,7 @@ Being inserted in machine's ports, ICRH and LHCD antennas are facing the plasma 
 \end{itemize}
 These constraints restrict the list of usable materials to certain kinds of metals or ceramics only. Moreover, the large heat fluxes due to the plasma or to the RF losses require the antenna to be actively cooled in order to sustain continuous operation. Moreover, in future machine like ITER, neutron activation and nuclear safety and remote handling compatibility adds supplementary constraints on material choices and mechanical designs.
 
-In this manuscript, only ICRH and LHCD antennas are discussed. Although IC waves can be used for current drive and LH waves to plasma heating, these systems will be regarded as dedicated to plasma heating and current drive respectively. ICRH antennas and in particular the WEST antenna are discussed in Section~\ref{sec:ICRH_antennas}. The Tore Supra/WEST and ITER LHCD antennas are discussed in Section~\ref{sec:LHCD_antennas}.
+In this manuscript, only ICRH and LHCD antennas are discussed. Although IC waves can be used for current drive and LH waves to plasma heating, these systems will be regarded as dedicated to plasma heating and current drive respectively. ICRH antennas and in particular the WEST antenna are discussed in Chapter~\ref{chap:ICRF}. The Tore Supra/WEST and ITER LHCD antennas are discussed in Chapter~\ref{chap:LHRF}.
 
 
 % #####################################################
