--- a/tex/chap_high_power_icrf.tex
+++ b/tex/chap_high_power_icrf.tex
@@ -212,7 +212,7 @@ A two-stage quarter-wavelength and water cooled impedance transformer is connect
 % ###################################################
 % ###################################################
 \subsection{WEST ICRH Antenna Modelling}\label{sec:WEST_ICRH_antenna_modelling}
-\marginnote{Parts of this section are taken from \citeauthyear{hillairet2019-1}.}
+\marginnote{Parts of this section are taken from \citeauthyear{hillairet2020-2}.}
 In this section, we illustrate the complete RF modelling the WEST Ion Cyclotron Resonance Heating (ICRH) antenna. The complete antenna circuit is made by connecting the various elements that compose it, separately full-wave modelled from the final CAD model of the antenna or using equivalent lumped models. 
 
 Such approach is not new \textit{per se} since it was done during the WEST ICRH antenna design with commercial software such as ANSYS Designer in \sidecite{hillairet2015-2} and was also done with proprietary codes (i.e. owned by the person or the firm who has developed it) in \sidecite{durodie2015, helou2015-2}. However, the author firmly believes in the advantages Open Source software in Science, as when these tools are not open-sourced, it leads to an obvious reproducibility problem as one should only rely on authors claims. To conform to the necessity of reproducibility in science,  software sources used in physical and engineering researches should ideally be made open when possible \sidecite{ince2012}. The case of RF network manipulation and analysis is no different. Thus, this section illustrates some functionalities of the open source Python package \texttt{scikit-rf} maintained by the author and used by hundreds of users in the world\marginnote{At the time of the writing of this manuscript (April 2020), the \texttt{scikit-rf} package has been downloaded more then 50~000 times since January 2017 using the Anaconda Python package manager (but this include multiple downloads/user). The number of download of the package on github is of the order of 20 to 50 per 15 days. More details about scikit-rf is given in Section~\ref{sec:OSS}.}. This section is accompanied by a set of  \href{https://doi.org/10.5281/zenodo.2668370}{online Jupyter notebooks} illustrating in more details the code leading to the results presented here.
@@ -367,11 +367,11 @@ Figure~\ref{fig:halfantennacurrentvoltage} illustrates the voltage and current a
 	\label{fig:westicrhantennapicture}
 \end{figure}
 
-During the WEST C3 campaign in 2017-2018, the first two ICRH antennas have been commissioned and used on plasma \sidecite{helou2019}, after having been separately commissioned at high voltage under vacuum on the TITAN test bed \sidecite{bernard2019}. Up to 1~MW per antenna have been achieved and up to 1.4~MW with the two antennas combined. Antennas behaved as expected from RF modelling and their tuning has been made both manually and using a real-time controlled algorithm. 
+During the WEST C3 campaign in 2017-2018, the first two ICRH antennas have been commissioned and used on plasma \sidecite{helou2020}, after having been separately commissioned at high voltage under vacuum on the TITAN test bed \sidecite{bernard2019}. Up to 1~MW per antenna have been achieved and up to 1.4~MW with the two antennas combined. Antennas behaved as expected from RF modelling and their tuning has been made both manually and using a real-time controlled algorithm. 
 
 During the WEST experimental campaign C4 in 2019 and for the first time in WEST, all the three ICRH antennas have been operated on plasma. The RF plant has been run reliably and all three antennas have been used simultaneously on plasma. Using ICRH system alone, the total RF coupled power on plasma peaked to 6~MW and reached regularly the range of 3~MW during few seconds. The ICRH system has been operated together with the Lower Hybrid and Current Drive (LHCD) system: up to 9.2~MW peak and 8~MW during 3 seconds in stable conditions of combined RF power have coupled.
 
-Long pulse high power operation requires dedicated protections from the generator to the antenna. Several complementary interlock systems have been also validated \sidecite{helou2019}. Sub-Harmonic Arc Detector (SHAD) and reflected power interlocks stop generators from feeding an antenna within 10~µs, then re-apply power after 30~ms. The RF power is real-time controlled in order not to exceed the antenna maximum electric field (2~kV/mm) or the maximum voltages and currents thresholds at the capacitors (30~kV or 915~A peak values respectively). The new optical arc detectors looking inside the antenna have been qualified and found to trigger mostly during the conditioning phases. These optical detectors are particularly essential to protect the low impedance sections of the antenna, where arcs may not trigger other safety systems. The pressure level inside the antenna is monitored from an auxiliary pumping system.  RF power is cut if pressure is above a safety threshold of $3.5\times10^{-3}$~Pa until pressure recovers. Abnormal events can also be detected from the antenna voltage measurements and additional interlocks have been added for safer operation. RF power is stopped within 10~µs in case of voltages lower than 10~kV (for power larger than 100 kW) or if voltages relative differences are higher than 50\%. Thanks to all of these security systems no damage has been observed on the three antenna front-faces after the WEST 2019 experimental campaign.
+Long pulse high power operation requires dedicated protections from the generator to the antenna. Several complementary interlock systems have been also validated \sidecite{helou2020}. Sub-Harmonic Arc Detector (SHAD) and reflected power interlocks stop generators from feeding an antenna within 10~µs, then re-apply power after 30~ms. The RF power is real-time controlled in order not to exceed the antenna maximum electric field (2~kV/mm) or the maximum voltages and currents thresholds at the capacitors (30~kV or 915~A peak values respectively). The new optical arc detectors looking inside the antenna have been qualified and found to trigger mostly during the conditioning phases. These optical detectors are particularly essential to protect the low impedance sections of the antenna, where arcs may not trigger other safety systems. The pressure level inside the antenna is monitored from an auxiliary pumping system.  RF power is cut if pressure is above a safety threshold of $3.5\times10^{-3}$~Pa until pressure recovers. Abnormal events can also be detected from the antenna voltage measurements and additional interlocks have been added for safer operation. RF power is stopped within 10~µs in case of voltages lower than 10~kV (for power larger than 100 kW) or if voltages relative differences are higher than 50\%. Thanks to all of these security systems no damage has been observed on the three antenna front-faces after the WEST 2019 experimental campaign.
 
 \begin{figure}[h]
 	\centering
@@ -380,7 +380,7 @@ Long pulse high power operation requires dedicated protections from the generato
 	\label{fig:westicrhvswrvsrc}
 \end{figure}
 
-\todo{Finalize this section with the IAEA paper}
+%\todo{Finalize this section with the IAEA paper}
 
 % #####################################################
 % #####################################################
@@ -660,4 +660,17 @@ A dedicated PhD oriented on material science has been setup with the Toulouse Un
 
 
 
+\section{Chapter Summary and Perspectives}
+In this chapter we first gave the necessary theoretical background to address the design of high-power Ion Cyclotron Resonance Heating systems. 
 
+In the frame of the upgrade of the Tore Supra tokamak to WEST, the RF design of the WEST ICRH antenna has been performed. The antenna coupling has been improved using the COMSOL software. Other elements of the antenna have been optimized to leave more space for water cooling, making the WEST ICRH antennas the first load-resilient ICRH antennas compatible with CW operation.
+
+The complete RF model of the WEST ICRH antennas has been modelled using the open-source Python package \href{http://scikit-rf.org/}{\texttt{scikit-rf}}, which the author is maintainer. The WEST ICRH antenna is modelled by connecting the various elements that compose it, separately full-wave modelled from final CAD models. Tunable elements, such as the matching capacitors, can be either created from ideal lump components or from interpolating full-wave calculations performed at various capacitance configurations. Being open-source, using \texttt{scikit-rf} to create the antenna numerical model with reproducible work-flow adds confidence in the fact that future users could use/maintain and extend it.
+
+The three WEST ICRH antennas have been commissioned and used on WEST plasma between 2017 and 2019. The commissioning phase was relatively short, of about two days for each antenna to reach 1 to 1.5~MW. In the C4 campaign, after this commissioning phase, all three antennas have been operated simultaneously on WEST plasmas, leading to 5.8~MW coupled ICRH power after around 50~plasma discharges (close to 2~MW per antenna). While these results are very encouraging, some work remains for the future WEST campaigns to achieve reliably the target performances of 9MW/30s or 3MW/1000s.
+
+
+In parallel, Radio-Frequency tests have been performed at CEA/IRFM using a RF resonator equipped with RF contact prototypes. It is planned to use these contacts inside the ITER ICRH antennas and these tests aimed to verify their compatibility with the ITER specifications. However, while the required current performances has been reached on durations inferior to 60~s and half-current target reached in steady-state conditions, these contacts failed for higher current levels and longer durations. A dedicated PhD oriented on material science has been setup in order to analyse the failure mechanisms of these RF contacts. The conclusions of this work are that material selection is the main driver of the both RF and thermal performances of these RF contacts, in particular when used under vacuum environment. Following the recommendations made by this work, a new set of test with improved RF contacts and choice of coatings and bulk materials will be made at CEA/IRFM in 2021.
+
+
+%TWA \sidecite{ragona2019-1, melnikov2020} TWA WEST \sidecite{ragona2019}
