--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -58,11 +58,11 @@ Multipactor is a process by which electron population increases from a resonant 
 	\item A synchronism of the electron transit time between a single or two electrodes and the RF electric field period.
 \end{itemize}
 
-In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite{gill1948, kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads \sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite{elkhaldi2019} and of course fusion experiments. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally lead to an arc \sidecite{hohn1997}. These arcs can lead to surface erosion \sidecite{goniche2012}, dielectric components metallization \sidecite{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite{neuber1998, neuber2007}. 
+In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite{gill1948, kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads \sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite{elkhaldi2019} and of course fusion experiments \sidecite{jang2020}. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally lead to an arc \sidecite{hohn1997}. These arcs can lead to surface erosion \sidecite{goniche2012}, dielectric components metallization \sidecite{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite{neuber1998, neuber2007}. 
 
 %The ICRF and LHRF antennas are  made of copper or silver-coated stainless-steels structures and are located in vacuum environments. The vacuum sealing with pressurized transmission lines is made with the help of ceramics such as alumina, aluminium nitride, beryllium oxide or diamond. 
 
-Signature of multipactor breakdowns have been found to be low amplitude and wideband spectrum of excited frequencies contrary to high voltage arcs \cite{dinca2009}. Voltage handling limits also arise in the antenna facing the plasma, which also reduce the power coupled by the antenna. Impurity production, increasing the neutral particles pressure, degrades the antenna voltage handling. Experimental works identified multipactor as the leading explanation for observed ICRF antenna neutral pressure limit \cite{graves2006}.
+Signature of multipactor breakdowns have been found to be low amplitude and wideband spectrum of excited frequencies contrary to high voltage arcs \sidecite{dinca2009}. Voltage handling limits also arise in the antenna facing the plasma, which also reduce the power coupled by the antenna. Impurity production, increasing the neutral particles pressure, degrades the antenna voltage handling. Experimental works identified multipactor as the leading explanation for observed ICRF antenna neutral pressure limit \sidecite{graves2006}.
 
 In some cases however, multipactor-induced discharges can be desired for vacuum RF conditioning \sidecite{mishra2010}. In addition to standard cleaning procedures, surface conditioning is necessary to increase the voltage handling capability. To this end, short low power (1-10~kW) RF pulses (100-1000~ms) are applied on RF antennas under vacuum (no plasma) to reduce the secondary emission of the metallic surfaces\sidecite{halbritter1982}. This method, used both in ICRF \sidecite{colestock1985, wang2015} and LHRF \sidecite{ekedahl1998,goniche2012} is an essential preliminary step before increasing both power and duration to medium values (10-100~kW/100-200~ms) in order to increase the surface temperature due to RF losses and make them out-gass (still in vacuum). Once done, RF commissioning on plasma at medium powers and durations can be realized to clean parts of the antenna that do not carry a substantial fraction of the current \sidecite{noterdaeme1993}, before finally achieved high voltage conditioning at high power (>100kW/10ms) to further increase the voltage stand-off limit. Hence, multipactor can depend on the operating conditions and its predictability is hence subject to the changes  in secondary emission properties of material. This aspect has been investigated in the frame of the PhD of Nicolas Fil and is reported in Section~\ref{sec:multipactor_TEEY}.
 
@@ -235,3 +235,10 @@ An important work has been made in POTOMAC to describe material electron emissio
 
 
 
+
+\section{Chapter Summary and Perspectives}
+RF breakdowns and vacuum arcs are a recurrent problematic in high RF power applications and magnetic nuclear fusion experiments. In this chapter we have summarized the research work performed in collaboration with ONERA and CNES on the multipactor phenomena, a particular physical mechanism arising in high RF power system under vacuum that can lead to breakdown. 
+
+Multipactor can arise in both coaxial geometry (such as used in ICRH range of frequency) or in rectangular waveguides (such as used in LHCD antennas). Multipactor appearance depends on material's Secondary Emission Yield and the synchronism of electron transit time between a single or two electrodes in one (or few) RF electric field period. However, the results obtained in the frame of two PhD showed that this mechanism is also affected by material surface conditions and background magnetic field. In addition, the presence of dielectric materials can lead to changes on the surface potential, affecting the electron dynamics. When not taken into account properly, these aspects lead to wrong multipactor power threshold predictions.
+
+In order to avoid taking oversized safety margins, modelling the appearance of multipactor in an accurate and reliable way is still a key issue. The future challenge in this field is to use accurate material electron emission models to mimic the real operational conditions, i.e. after temperature baking or with background magnetic field. So far, such tool doesn't exist for arbitrary complex geometries and materials. Producing such tools, if possible in a collaborative and open-source way in order to aggregate various material properties, would be of great impact for space, particle accelerator and of course RF fusion communities.
