Petites modifications dans les résumés.

--- a/references.bib
+++ b/references.bib
@@ -2657,7 +2657,7 @@
   issn = {23521791},
   doi = {10/ggc27z},
   abstract = {Recent achievements in studies of the effects of ICRF (Ion Cyclotron Range of Frequencies) power on the SOL (Scrape-Off Layer) and PWI (Plasma Wall Interactions) in ASDEX Upgrade (AUG), Alcator C-Mod, and JET-ILW are reviewed. Capabilities to diagnose and model the effect of DC biasing and associated impurity production at active antennas and on magnetic field connections to antennas are described. The experiments show that ICRF near-fields can lead not only to E \texttimes{} B convection, but also to modifications of the SOL density, which for Alcator C-Mod are limited to a narrow region near antenna. On the other hand, the SOL density distribution along with impurity sources can be tailored using local gas injection in AUG and JET-ILW with a positive effect on reduction of impurity sources. The technique of RF image current cancellation at antenna limiters was successfully applied in AUG using the 3-strap AUG antenna and extended to the 4-strap Alcator C-Mod field-aligned antenna. Multiple observations confirmed the reduction of the impact of ICRF on the SOL and on total impurity production when the ratio of the power of the central straps to the total antenna power is in the range 0.6 {$<$} Pcen/ Ptotal{$<$} 0.8. Near-field calculations indicate that this fairly robust technique can be applied to the ITER ICRF antenna, enabling the mode of operation with reduced PWI. On the contrary, for the A2 antenna in JET-ILW the technique is hindered by RF sheaths excited at the antenna septum. Thus, in order to reduce the effect of ICRF power on PWI in a future fusion reactor, the antenna design has to be optimized along with design of plasmafacing components.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\ICRH\\Bobkov et al._2019_Impact of ICRF on the scrape-off layer and on plasma wall interactions From present experiments to fusion reactor(2).pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\AA8N7KT8\\Bobkov et al. - 2019 - Impact of ICRF on the scrape-off layer and on plas.pdf},
   journal = {Nuclear Materials and Energy},
   language = {en}
 }
