--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -5,16 +5,18 @@
 
 Magnetic confinement is currently the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration. However, designing and using multi-megawatts RF systems is not trivial and leads to many issues, which for some of them  are relatively little addressed in the literature. 
 
-This manuscript describes part of my work performed at CEA/IRFM since 2008 as RF research scientist. The Chapter 1 is an introduction to the controlled nuclear fusion and the need for Heating and Current Drive systems in Tokamaks. The main elements of the RF systems used in current experimental devices are identified in this chapter. 
+This manuscript describes part of my work performed at CEA/IRFM since 2008 as RF research scientist in order to enhance the performances of high-power RF systems for magnetic confinement fusion devices. It is organized as follows. 
 
-The Chapter 2 recalls the theoretical elements of the electromagnetic theory which are necessary for the daily work of a RF engineer working in RF Heating and Current Drive systems for tokamaks. 
+The Chapter \ref{chap:fusion_and_rf} is an introduction to the controlled nuclear fusion and explain the need for Heating and Current Drive systems in Tokamaks. The main elements of the RF systems used in current experimental devices are identified in this chapter. Fusion scientists can easily skip this chapter. 
 
-The Chapter 3 describes my work on the coupling of RF waves from antennas to tokamak plasmas. After in introduction to waves in plasma, in particular in the Ion Cyclotron and Lower Hybrid range of frequencies, the subsection of this chapter detail the LH coupling code ALOHA and some examples of its use on Tore Supra experiments. The last part of this chapter is dedicated to the use of full-wave software for the coupling calculations.
+The Chapter \ref{chap:RF_fundamentals} recalls the theoretical elements of the electromagnetic theory which are necessary for the daily work of a RF engineer working in RF Heating and Current Drive systems for tokamaks. This chapter is not intended to teach specialists in the RF field anything, but just to bring together in one place the essential RF quantities and figures or merit. 
 
-The Chapters 4 and 5 described my work for the design and tests of high power devices for RF heating and current drive in tokamaks. Chapter 4 is dedicated to Ion Cyclotron Range of Frequency (ICRF). It concerns my work on the WEST ICRF antennas design and modelling which has started in 2013. Another important topic of this chapter concerns the R\&D performed on the ITER ICRF system, specifically on RF contacts. The Chapter 5 addresses the design and tests of RF devices for the LHRF from 2010 to 2014, which concerns in particular components for the then foreseen ITER LHCD system.
+The Chapter \ref{chap:rf_coupling} describes my work on the coupling of RF waves from antennas to tokamak plasmas. After in introduction to waves in plasma, in particular in the Ion Cyclotron and Lower Hybrid range of frequencies, we describe the Lower Hybrid Range of Frequency (LHRF) coupling code ALOHA and some examples of its use on Tore Supra experiments. The last part of this chapter is dedicated to the use of full-wave software for the coupling calculations.
 
-The Chapter 6 introduces the work mostly performed by PhD students concerning RF breakdowns and in particular the multipactor effect. This work has been made in collaboration with CNES and ONERA since 2014.
+The Chapters \ref{chap:ICRF} and \ref{chap:LHRF} describe my work for the design and tests of high power devices for RF heating and current drive in tokamaks. Chapter 4 is dedicated to Ion Cyclotron Range of Frequency (ICRF). It concerns my work on the WEST ICRF antennas design and modelling which has started in 2013. Another important topic of this chapter concerns the R\&D performed on the ITER ICRF system, specifically on RF contacts. The Chapter 5 addresses the design and tests of RF devices for the LHRF from 2010 to 2014, which concerns in particular components for the then foreseen ITER LHCD system.
 
-Finally, the Chapter 7 describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". This chapter also addresses my work on open-source software developments, in particular on the Python package scikit-rf. 
+The Chapter \ref{chap:Multipactor} introduces the research carried out on topic of RF breakdowns and in particular the multipactor effect. This work has been made in collaboration with CNES and ONERA since 2014.
 
-This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world in (\citeauthyear{farthouat2010}).
+Finally, the Chapter \ref{chap:Fusion Education} describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". This chapter also addresses my work on open-source software developments, in particular on the Python package \href{http://scikit-rf.org/}{scikit-rf}. 
+
+%This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world in (\citeauthyear{farthouat2010}).
