--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -7,17 +7,18 @@ Toutefois, reproduire les conditions de température favorables à la fusion, so
 
 Afin d'obtenir des températures de plusieurs dizaines de millions de degrés, des systèmes radiofréquences sont utilisés couramment sur différentes installations expérimentales dans le monde. Ces systèmes vont générer puis transmettre jusqu'au plasma des ondes électromagnétiques dont la puissance est de l'ordre de plusieurs mégawatts. Selon leurs fréquences (de plusieurs MHz à une centaine de GHz), elles vont transférer leur énergie de préférence aux ions ou aux électrons du plasma, voire générer du courant électrique dans le plasma, afin d'augmenter la durée de maintien du plasma. Dans un tokamak, ces ondes sont injectées dans le plasma par des antennes situées à proximité de ce dernier. Ces antennes doivent être conçues pour opérer sous vide à des tensions et courants de plusieurs dizaines de kilovolts at kiloampères, sur des temps longs, tout en supportant les divers flux thermiques et de particules en provenance du plasma. Ces conditions sévères, voire hostiles, sont exclusives à ces machines de recherche et par conséquent la littérature scientifique sur ce sujet est peu abondante.
 
-Ce manuscrit décrit une partie de mon travail réalisé au CEA/IRFM depuis 2008 en tant qu'ingénieur radio-fréquence et physicien des plasmas sur la conception de ces antennes ou de leurs éléments ainsi que de l'analyse de leurs intéractions avec le plasma. 
+Ce manuscrit décrit une partie de mon travail réalisé au CEA/IRFM depuis 2008 en tant qu'ingénieur radio-fréquence et physicien des plasmas sur la conception de ces antennes ou de leurs éléments ainsi que de l'analyse de leurs intéractions avec le plasma. Le fil conducteur à ces travaux est toujours le même : améliorer les performances des systèmes radiofréquences à forte puissance, en termes de puissances couplées au plasma ou de durée de fonctionnement.
+ 
 
-Les deux premiers chapitres sont des introductions et des rappels théoriques nécessaires à la lecture des chapitres suivants. Le chapitre 1 est une introduction à la fusion nucléaire contrôlée et aux systèmes de chauffage et de génération de courant pour des plasmas de tokamaks. Les principaux éléments composants les systèmes radio-fréquences utilisés pour le chauffage et la génération de courant dans les plasmas de tokamak sont également décrits dans ce chapitre. Le chapitre 2 rappelle les éléments théoriques permettant la description de la propagation des ondes électromagnétiques dans les lignes de transmission jusqu'au plasma faisant face aux antennes.
+Les chapitres \ref{chap:fusion_and_rf} et \ref{chap:RF_fundamentals} sont des introductions et des rappels théoriques nécessaires à la lecture des chapitres suivants. Le chapitre 1 est une introduction à la fusion nucléaire contrôlée et aux systèmes de chauffage et de génération de courant pour des plasmas de tokamaks. Les principaux éléments composants les systèmes radio-fréquences utilisés pour le chauffage et la génération de courant dans les plasmas de tokamak sont également décrits dans ce chapitre. Le chapitre 2 rappelle les éléments théoriques permettant la description de la propagation des ondes électromagnétiques dans les lignes de transmission jusqu'au plasma faisant face aux antennes. Ces deux chapitres n'ont pas la vocation d'apprendre quoi que ce soit aux spécialistes du sujet, mais simplement de rassembler de manière cohérente les éléments de vocabulaire et les métriques utilisées dans les chapitres suivants.
 
-Le chapitre 3 décrit mes travaux concernant le couplage des ondes radio-fréquence excitées par les antennes au plasma de tokamaks. Ce chapitre débute par une rapide introduction théorique aux ondes dans les plasmas, en particulier aux domaines de fréquences dits Cyclotronique Ioniques et Hybride Basse qui concerne ce manuscrit. Le couplage de ces ondes au plasma est analysé de deux façons pour les ondes Hybrides Basses : i) grâce à une formulation semi-analytique implémentée dans le code ALOHA ou ii) en utilisant des codes de calcul commerciaux. Les résultats numériques obtenus sont comparés avec  des expériences réalisées sur le tokamak Tore Supra.
+Le chapitre \ref{chap:rf_coupling} décrit mes travaux concernant le couplage des ondes radio-fréquence excitées par les antennes au plasma de tokamaks. Ce chapitre débute par une rapide introduction théorique aux ondes dans les plasmas, en particulier aux domaines de fréquences dits Cyclotronique Ioniques et Hybride Basse qui concerne ce manuscrit. Le couplage de ces ondes au plasma est analysé de deux façons pour les ondes Hybrides Basses : i) grâce à une formulation semi-analytique implémentée dans le code ALOHA ou ii) en utilisant des codes de calcul commerciaux. Les résultats numériques obtenus sont comparés avec  des expériences réalisées sur le tokamak Tore Supra.
 
-Les chapitre 4 et 5 portent sur plusieurs exemples de travaux relatifs à la conception d'antennes radio-fréquences ou de leurs éléments. Le chapitre 4 est dédié à la gamme de fréquence Cyclotronique Ionique (dizaines de MHz). La première partie détaille les travaux réalisés à partir de 2013 concernant la conception des antennes Cyclotroniques Ioniques pour le tokamak WEST. La seconde partie de ce chapitre est consacrée aux travaux réalisés et encadrés dans le cadre de la R\&D menée sur les contacts électriques glissants pour le système Cyclotronique Ionique d'ITER. Le chapitre 5 est quant à lui consacré aux activités de conceptions et de tests de composants radiofréquences pour le système à la fréquence Hybride Basse d'ITER, réalisés entre 2010 et 2014.
+Les chapitres \ref{chap:ICRF} et \ref{chap:LHRF} portent sur plusieurs exemples de travaux relatifs à la conception d'antennes radio-fréquences ou de leurs éléments. Le chapitre 4 est dédié à la gamme de fréquence Cyclotronique Ionique (dizaines de MHz). La première partie détaille les travaux réalisés à partir de 2013 concernant la conception des antennes Cyclotroniques Ioniques pour le tokamak WEST. La seconde partie de ce chapitre est consacrée aux travaux réalisés et encadrés dans le cadre de la R\&D menée sur les contacts électriques glissants pour le système Cyclotronique Ionique d'ITER. Le chapitre 5 est quant à lui consacré aux activités de conceptions et de tests de composants radiofréquences pour le système à la fréquence Hybride Basse d'ITER, réalisés entre 2010 et 2014.
 
-Le chapitre 6 rapporte les travaux d'étudiants encadrés sur la thématique des arcs et notamment du phénomène multipactor. Ces travaux ont été menés en collaboration avec le CNES et l'ONERA.
+Le chapitre \ref{chap:Multipactor} rapporte les travaux réalisés et encadrés sur la thématique des arcs et notamment du phénomène multipactor. Ces travaux ont été menés en collaboration avec le CNES et l'ONERA.
 
-Enfin, le chapitre 7 porte sur mes activités d'enseignement et de vulgarisation réalisés au CEA/IRFM, pour des tranches d'âges diverses allant du collège jusqu'aux étudiants de Master 2. Ce chapitre se termine par la description de mon activité autour du logiciel libre, en particulier le développement du package Python scikit-rf.
+Enfin, le chapitre \ref{chap:Fusion Education} porte sur mes activités d'enseignement et de vulgarisation réalisés au CEA/IRFM, pour des tranches d'âges diverses allant du collège jusqu'aux étudiants de Master 2. Ce chapitre se termine par la description de mon activité autour du logiciel libre, en particulier le développement du package Python \href{http://scikit-rf.org/}{scikit-rf}.
 
 
 
